--- a/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
@@ -50,7 +50,7 @@
     <em>&quot;{{ entity.title }}&quot;</em>.
   </div></div>
   
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
 {% include "maps/map_elements.xhtml" %}
 </div>
 
