--- a/trunk/mobile_portal/mobile_portal/templates/admin/base_site.html
+++ b/trunk/mobile_portal/mobile_portal/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | Mobile Oxford Admin{% endblock %}
+{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">Mobile Oxford Admin</h1>
+<h1 id="site-name">{% trans 'Mobile Oxford Administration' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
