--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -18,7 +18,7 @@
 		 <p>
 			{{ search_form.query }}
 		{% ifequal style_group "dumb" %}
-		    <input alt="Search" type="button" value="Search" />
+		    <input alt="Search" type="submit" value="Search" />
 		{% else %}
 			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
 		{% endifequal %}
@@ -64,7 +64,7 @@
         {% endifequal %}
     </div>
 
-{% if 1 %}
+{% if 0 %}
         <hr/>
         <div class="section">
             <h2>Session</h2>
