--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -18,13 +18,32 @@
 
 {% block content %}
 
+<style>
+table {
+    width: 100%;
+    background: #121C28;
+    color: #FFBF00;
+    border: 2px solid #FFBF00;
+    -webkit-border-radius: 8px;
+    padding: 2px 0;
+}
+
+tr {
+
+    border-collapse: collapse;
+    border-top: 1px solid #FFBF00;
+}
+</style>
+
+
+
 <div class="section">
 	<h2><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
 
 
 {% if services %}
-<div class="article"><div class="bubble pad-5">
-<table class="section-table">
+<div class="pad-5">
+<table>
     <thead style="display:none;">
         <tr>
             <th>Service</th>
@@ -45,7 +64,7 @@
 {% endfor %}
     </tbody>
 </table>
-</div></div>
+</div>
 
 {% else %}
 <div class="note"><div class="bubble pad-10">
