--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
@@ -14,7 +14,7 @@
 <div class="location-container">
   <span class="location-status">We do not yet know where you are.</span>
   <span class="location-action"> </span>
-</div>
+</divp>
 {% endif %}
 
 <div class="update-location">
@@ -31,7 +31,7 @@
 {% else %}
 
 <form method="get" action="{% url core_update_location %}" class="manual-update-form">
-        <label for="location">Set a new location</label>:
+        <label for="location-name">Set a new location</label>:
         <input name="return_url" type="hidden" value="{{ return_url|default:path }}"/>
         <input id="location-name" name="name" value="{{ location }}"/>
         <input type="submit" value="Update"/><br/>
