--- a/trunk/mobile_portal/mobile_portal/site-media/css/groups/smart.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/groups/smart.css
@@ -78,6 +78,9 @@ li#menu-sakai {background-image:url('../../png/index-icons/sakai.png');}
 li#menu-oucs_status {background-image:url('../../png/index-icons/oucs_status.png');}
 /* End Index Page Specific */
 
+
+
+
 /* Breadcrumb Trail Styles */
 div#bc-header {
     height:34px;
@@ -180,14 +183,14 @@ ul li span {
     padding-left: 25px;
 }
 
-/* Background images primarily for list items */
+    /* Background images primarily for list items */
 .phone {background-image:url('../../png/icons/list-phone.png');}
 .email {background-image:url('../../png/icons/list-email.png');}
 .external {background-image:url('../../png/icons/list-external.png');}
 .external-mobile {background-image:url('../../png/icons/list-external-mobile.png');}
 .audio {background-image:url('../../png/icons/list-audio.png');}
 .video {background-image:url('../../png/icons/list-video.png');}
-/* End background images for list items */
+    /* End background images for list items */
 /* End Standard List Styles */
 
 
@@ -249,17 +252,13 @@ div.backgrounded-image {
     background-position: center center;
     position: relative;
 }
-
 a.zoom-out, a.zoom-in {
     padding: 5px;
     display: block;
 }
-
 a.zoom-out {float: left;}
 a.zoom-in {float: right;}
-
 a.zoom-out img, a.zoom-in img { border:0 ;}
-
 div.osm-license {
     position: absolute;
     top: auto;
@@ -348,7 +347,7 @@ div.form textarea#id_body {
     font-size: 1.4em;
     font-size: 1.4em;
 }
-/* CSS 2.1 */
+    /* CSS 2.1 */
 div.form button[type="submit"] {
     min-width: 80px ;
     font-size: 1.3em;
@@ -356,27 +355,20 @@ div.form button[type="submit"] {
 }
 /* End Forms/Search */
 
+
+
 /* OUCS Status */
-li.service_status {
+ul.service-status li {
+    background: #121C28;
     background-position:10px center;
     background-repeat:no-repeat;
+    border:none;
     padding-left:25px;
 }
-
-li.service_status_up {
-    background-image:url('../../png/icons/service-up.png');
-}
-li.service_status_partial, li.service_status_unknown {
-    background-image:url('../../png/icons/service-middle.png');
-}
-li.service_status_down {
-    background-image:url('../../png/icons/service-down.png');
-}
-
-span.service_status, span.service_detail {
-    font-size:90%;
-}
-
-span.service_detail {
-    font-style:italic;
-}
+ul.service-status li.service-status-up { background-image:url('../../png/icons/service-up.png'); background: #102821;}
+ul.service-status li.service-status-partial { background-image:url('../../png/icons/service-middle.png'); background: #272810;}
+ul.service-status li.service-status-unknown { background-image:url('../../png/icons/service-middle.png'); background: #272810;}
+ul.service-status li.service-status-down { background-image:url('../../png/icons/service-down.png'); background: #281010;}
+span.service-status, span.service-detail { font-size:90%; }
+span.service-detail { font-style:italic; }
+/* End OUCS Status */
