--- a/trunk/mobile_portal/mobile_portal/templates/oucs_status/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/oucs_status/index.xhtml
@@ -2,6 +2,24 @@
 
 {% block content %}
 
+{% if announce.items %}
+
+<div class="section">
+  <h2>Service announcements</h2>
+  
+  <ul>
+{% for item in announce.items %}
+    <li>
+      <h3>{{ item.title }}</h3>
+      {{ item.description }}<br/>
+      <small>{{ item.date }}</small>
+    </li>
+{% endfor %}
+  </ul>
+</div>
+
+{% endif %}
+
 <div class="section">
     <h2>OUCS Status</h2>
 
